// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallerySection component renders correctly 1`] = `
<div>
  <div
    class="MediaGallerySection Section-root-1 Section-alabaster-3"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-11 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <h2
              class="MuiTypography-root Typography-root-13 Typography-underline-15 MuiTypography-h2"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
          </div>
          <div
            class="MuiGrid-root Grid-item-11 MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MediaGallery-root-21"
            >
              <div
                class="MediaGallery-imageWrapper-22"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained MediaGallery-mainImageWrapper-25 MediaGallery-mainImageWrapperCover-26 MediaGallery-mainImageWrapperdefault-27 Media-root-33"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum image alt text"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
              <div
                class="Thumbnails-root-35"
                data-testid="thumbnails-root"
              >
                <button
                  aria-label="Scroll left"
                  class="MuiButtonBase-root Thumbnails-thumbScroller-36 Thumbnails-thumbScrollerLeft-37 ThumbScrollerButton-root-45 ThumbScrollerButton-left-46"
                  data-testid="thumbnail-scroller-left"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root ThumbScrollerButton-icon-48"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-label="Scroll right"
                  class="MuiButtonBase-root Thumbnails-thumbScroller-36 Thumbnails-thumbScrollerRight-38 Thumbnails-thumbScrollerHidden-39 ThumbScrollerButton-root-45 ThumbScrollerButton-right-47"
                  data-testid="thumbnail-scroller-right"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root ThumbScrollerButton-icon-48"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="Thumbnails-scroller-40"
                  data-testid="thumbnail-scroller"
                  style="margin-right: 0%;"
                >
                  <button
                    class="MuiButtonBase-root Thumbnails-thumbnail-41 Thumbnail-root-49 Thumbnail-selected-51 Thumbnail-large-52 Thumbnail-selected-51"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum image alt text\\",\\"action\\":\\"//image.asset.jpg\\"}"
                    data-testid="default-thumbnail"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="gatsby-image-wrapper gatsby-image-wrapper-constrained Media-root-33"
                      data-gatsby-image-wrapper=""
                      style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                    >
                      <div
                        style="max-width: 948px; display: block;"
                      >
                        <img
                          alt=""
                          aria-hidden="true"
                          role="presentation"
                          src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                          style="max-width: 100%; display: block; position: static;"
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        data-placeholder-image=""
                        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                      />
                      <picture>
                        <source
                          data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                          sizes="(min-width: 948px) 948px, 100vw"
                          type="image/webp"
                        />
                        <img
                          alt="Lorem ipsum image alt text"
                          data-gatsby-image-ssr=""
                          data-main-image=""
                          data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                          data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                          decoding="async"
                          draggable="false"
                          loading="lazy"
                          sizes="(min-width: 948px) 948px, 100vw"
                          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                        />
                      </picture>
                      <noscript />
                      <script
                        type="module"
                      >
                        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                      </script>
                    </div>
                  </button>
                  <button
                    class="MuiButtonBase-root Thumbnails-thumbnail-41 Thumbnail-root-49 Thumbnail-large-52"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum video label\\",\\"action\\":\\"//video-image.asset.jpg\\"}"
                    data-testid="default-thumbnail"
                    style="background-image: url(//video-image.asset.jpg);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="Thumbnail-accessibilityText-53"
                    >
                      Lorem ipsum video label
                    </span>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Thumbnail-playIcon-54"
                      data-testid="thumbnail-play-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 5v14l11-7z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaGallerySection component renders correctly with long description 1`] = `
<div>
  <div
    class="MediaGallerySection Section-root-56 Section-alabaster-58"
  >
    <div
      class="Container-root-64"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-66 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <h2
              class="MuiTypography-root Typography-root-68 Typography-underline-70 MuiTypography-h2"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
            <div
              class="description"
            >
              <div
                class="RichText-root-76"
              >
                <h2
                  class="MuiTypography-root RichText-title-77 Typography-root-68 MuiTypography-h2"
                  data-testid="typography"
                >
                  Heading 2
                </h2>
                <p
                  class="MuiTypography-root Typography-root-68 MuiTypography-body1 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  this is a test paragraph
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root Grid-item-66 MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MediaGallery-root-78"
            >
              <div
                class="MediaGallery-imageWrapper-79"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained MediaGallery-mainImageWrapper-82 MediaGallery-mainImageWrapperCover-83 MediaGallery-mainImageWrapperdefault-84 Media-root-90"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
